Add games and players views

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -2,6 +2,6 @@
     <td><%= game.location.title %></td>
     <td><%= game.starting_time %></td>
     <td><%= game.organizator.email %></td>
-    <td><%= game.players.count %></td>
+    <td><%= game.players_assigned.count %></td>
     <td><%= link_to 'Show', game_path(game) %></td>
   </tr>
