--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,13 @@
   </head>
 
   <body>
-    <%= render 'shared/flash' %>
+    <div class="container">
+    <div class="row justify-content-md-center">
+
+   <%= render 'shared/flash' %>
     <%= yield %>
+    </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
