--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -1,7 +1,10 @@
   <tr> 
     <td><%= game.location.title %></td>
-    <td><%= game.starting_time %></td>
+    <td><%= game.starting_time || 'none' %></td>
+    <td><%= game.end_time || 'none' %></td>
     <td><%= game.organizator.email %></td>
     <td><%= game.players_assigned.count %></td>
     <td><%= link_to 'Show', game_path(game) %></td>
+    <td><%= link_to 'Edit', edit_game_path(game) %></td>
+    <td><%= link_to 'Delete', game_path(game), method: "delete", data: {confirm: "Are you sure?"} %></td>
   </tr>
