--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,11 @@
 <h2>Games list</h2>
 <%= link_to 'New game', new_game_path %> <br>
-<table>
+<table class="table">
   <th>Location</th>
   <th>Starting time</th>
+  <th>End time</th>
   <th>Organizator</th>
   <th>Players amount</th>
-  <th>Comment</th>
+  <th colspan="3">Actions</th>
   <%= render @games %>
 </table>
