--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -6,3 +6,5 @@
   <td><%= link_to 'Edit', edit_location_path(location) %></td>
   <td><%= link_to 'Delete', location_path(location), method: "delete", data: {confirm: "Are you sure?"} %></td>
 </tr>
+
+<%= render 'form_inline', location: @location == location ? @location : location %>
