--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,6 @@
 <h2>Locations list</h2>
 <%= link_to 'New location', new_location_path %> <br>
+<%= render partial: 'shared/errors', locals: {resource: @location} %>
 <table class="table">
   <th>Title</th>
   <th colspan="2">Players amount default (max / min)</th>
