--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,4 +1,11 @@
 <h2>Players list</h2>
+
+<strong>Search:</strong> 
+<form>
+  <label for="search_text"></label>
+  <input id="search_text" type="text">
+</form>
+
 <table class="table">
   <th>Email</th>
   <th>Games</th>
