--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,4 +1,4 @@
-<% if resource.errors.present? %>
+<% if resource&.errors.present? %>
 
 <% resource.errors.full_messages.each do |message| %>
 <div class="alert alert-danger"> <p><%= message %></p> </div>
