--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,10 +1,10 @@
-<tr>
+<%= content_tag :tr, class: "form-inline-row-current", data: {location_id: location.id} do %>
   <td><%= location.title %></td>
   <td><%= location.default_min_players || '-' %></td>
   <td><%= location.default_max_players || '-' %></td>
   <td><%= link_to 'Show', location_path(location) %></td>
-  <td><%= link_to 'Edit', edit_location_path(location) %></td>
-  <td><%= link_to 'Delete', location_path(location), method: "delete", data: {confirm: "Are you sure?"} %></td>
-</tr>
+  <td><%= button_to 'Edit', edit_location_path(location), class: "form-inline-edit", data: {location_id: location.id} %></td>
+  <td><%= button_to 'Delete', location_path(location), method: "delete", data: {confirm: "Are you sure?"} %></td>
+<% end %>
 
 <%= render 'form_inline', location: @location == location ? @location : location %>
