--- a/app/views/locations/_form_inline.html.erb
+++ b/app/views/locations/_form_inline.html.erb
@@ -1,6 +1,6 @@
 <br><br>
 
-<%= content_tag :tr, class: "form-inline-row-edit hide", data: {resource_id: location.id} do %>
+<tr class="form-inline-row-edit hide">
   <%= form_with model:  @location, 
             url:    update_inline_location_path(location), 
             local:  true, 
@@ -8,13 +8,13 @@
             data:   { location_id: location.id },
             method: :patch do |form| %>
 
-    <td><%= form.text_field location.title == '' ? "title" : "location[title]", value: location.title %></td>
-    <td><%= form.number_field location.default_min_players == '' ? "default_min_players" : "location[default_min_players]", value: location.default_min_players %></td>
-    <td><%= form.number_field location.default_max_players == '' ? "default_max_players" : "location[default_max_players]", value: location.default_max_players %></td>
-    <td><%= link_to 'Cancel', {}, data: {location_id: location.id}, class: 'form-inline-cancel' %></td>
-    <td><%= form.submit 'Save', data: {location_id: location.id}, class: 'form-inline-save' %></td>
+    <td><%= form.text_field location.errors.present? ? "title" : "location[title]", value: location.title %></td>
+    <td><%= form.number_field location.errors.present? ? "default_min_players" : "location[default_min_players]", value: location.default_min_players %></td>
+    <td><%= form.number_field location.errors.present? ? "default_max_players" : "location[default_max_players]", value: location.default_max_players %></td>
+    <td><%= link_to 'Cancel', {}, data: {id: location.id}, class: 'form-inline-cancel' %></td>
+    <td><%= form.submit 'Save', data: {id: location.id}, class: 'form-inline-save' %></td>
     <td></td>
   <% end %>
 
-<% end %>
+</tr>
 
