--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,7 +10,10 @@
       <div class="nav-link"><%= link_to 'Players', players_path %></div>
     </li>
     <li class="nav-item">
-      <div class="nav-link"><%= link_to "Notifications #{current_player.notifications.count}", player_notifications_path(current_player) %></div>
+      <div class="nav-link">
+        <%= link_to "Notifications (new: #{current_player.notifications.unviewed.count})", unviewed_notifications_path %>
+          
+      </div>
     </li>
   </ul>
 </nav>
