--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,3 +1,10 @@
 .hide {
   display: none;
 }
+
+.block {
+  background-color: #ffffff;
+  border: 2px solid lightgray;
+  border-radius: 8px;
+  padding: 5px;
+}
