--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,6 +6,7 @@
   <th>End time</th>
   <th>Organizator</th>
   <th>Players amount</th>
+  <th>Status</th>
   <th colspan="3">Actions</th>
   <%= render @games %>
 </table>
