--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <%= render 'shared/nav' %>
     <% end %>
       <div class="container" style="background-color: #ffffff;">
-        <div class="row justify-content-md-center" style="border: 2px solid lightgray;border-radius: 8px;padding: 5px;">
+        <div class="row justify-content-md-center block">
         <%= render 'shared/flash' %>
         <%= yield %>
         </div>
