--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,11 +9,22 @@
     <li class="nav-item">
       <div class="nav-link"><%= link_to 'Players', players_path %></div>
     </li>
+    
+    <% if current_player.present? %>
+
     <li class="nav-item">
       <div class="nav-link">
         <%= link_to "Notifications (new: #{current_player.notifications.unviewed.count})", unviewed_notifications_path %>
-          
       </div>
     </li>
+    <li class="nav-item">
+      <div class="nav-link">
+        <%= link_to "Sign out (#{current_player.email})", sign_out_path, method: :delete %>
+      </div>
+    </li>
+
+    <% end %>
+
+
   </ul>
 </nav>
