Add ajax requests to notifications and oth

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -4,7 +4,7 @@
     <td><%= game.end_time || 'none' %></td>
     <td><%= game.organizator.email %></td>
     <td><%= game.players_assigned.count %></td>
-    <td><%= status(game) %></td>
+    <td><%= game_status(game) %></td>
     <td><%= link_to 'Show', game_path(game) %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Delete', game_path(game), method: "delete", data: {confirm: "Are you sure?"} %></td>
