--- a/app/views/players/_player.html.erb
+++ b/app/views/players/_player.html.erb
@@ -1,5 +1,5 @@
   <tr> 
     <td><%= player.email %></th>
-    <td><%= player.games_played.count %></th>
+    <td><%= player.games_player_in.count %></th>
     <td><%= link_to 'Show', player_path(player) %></td>
   </tr>
