Add scopes, invite acceptance, update notification sender and oth

--- a/app/views/games/_show_players_list.html.haml
+++ b/app/views/games/_show_players_list.html.haml
@@ -4,7 +4,7 @@
   - if @game.passed.nil?
     .mb-3
       = form_with model: @game_player, url: game_invites_path(@game) do |f|
-        = f.collection_select :id, Player.players_not_in_game(@game).order(:email), :id, :email, prompt: 'Select'
+        = f.collection_select :id, Player.players_available_for_invite(@game).where.not(id: current_player.id).order(:email), :id, :email, prompt: 'Select'
         = f.submit 'Invite'  
   
   = render partial: "invites/list"
