--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,3 +1,12 @@
+<%= content_for :head do %>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js"></script>
+  <style>
+    body { margin: 0; padding: 0; }
+    #map { position: absolute; width: 966px; height: 400px }
+  </style>
+<% end %>
+
 <div class="mb-3">
   <%= form.label "title", "Title", class: 'form-label' %>
   <%= form.text_field "title", class: 'form-control', value: location.title %>
@@ -10,4 +19,154 @@
   <%= form.label "default_max_players", "Max. players", class: 'form-label' %>
   <%= form.number_field "default_max_players", in: 2..50, step: 1, class: 'form-control', value: location.default_max_players %>
 </div>
+
+<div class="mb-3">
+  <%= form.label "lng", class: 'form-label' %>
+  <%= form.text_field "lat", id: "lng", class: 'form-control' %>
+</div>
+<div class="mb-3">
+  <%= form.label "lat", class: 'form-label' %>
+  <%= form.text_field "lat", id: "lat", class: 'form-control' %>
+</div>
+<div class="mb-3">
+  <%= form.label "region", class: 'form-label' %>
+  <%= form.text_field "region", id: "region", class: 'form-control' %>
+</div>
+<div class="mb-3">
+  <%= form.label "district", class: 'form-label' %>
+  <%= form.text_field "district", id: "district", class: 'form-control' %>
+</div>
+<div class="mb-3">
+  <%= form.label "place", class: 'form-label' %>
+  <%= form.text_field "place", id: "place", class: 'form-control' %>
+</div>
   <%= form.submit %>
+
+<div id="map" class="mt-5"></div>
+
+<div id="geocoder"></div>
+<pre id="result"></pre>
+
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js">
+  // добавили для появления поля поиска
+</script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" type="text/css">
+
+<script>
+  // const accessToken = 'pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ'
+  mapboxgl.accessToken = 'pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ';
+const map = new mapboxgl.Map({
+container: 'map', // container ID
+style: 'mapbox://styles/mapbox/streets-v11', // style URL
+center: [37.8, 56], // starting position [lng, lat]
+zoom: 9 // starting zoom
+});
+
+// Create a default Marker and add it to the map.
+const marker1 = new mapboxgl.Marker({
+  draggable: true
+})
+.setLngLat([38, 57])
+.addTo(map);
+
+// по щелчку перезаписываем координаты маркера
+map.on('click', (e) => {
+  marker1.setLngLat([e.lngLat.lng, e.lngLat.lat])
+
+  // ajax request for coordinates (https://docs.mapbox.com/playground/geocoding/)
+  $.ajax({
+   url: `https://api.mapbox.com/geocoding/v5/mapbox.places/${e.lngLat.lng},${e.lngLat.lat}.json?language=en&limit=1&access_token=pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ`,
+   success: function (data) {
+      console.log('data IS ' + data);
+      // console.log('data.responseJSON["features"][0]["place_name"] IS ' + data.responseJSON["features"][0]["place_name"]); // undefined
+      console.log('data["features"][0]["place_name"] IS ' + data["features"][0]["place_name"]); // undefined
+      $("#lng")[0].value      = e.lngLat.lng;
+      $("#lat")[0].value      = e.lngLat.lat;
+      $("#region")[0].value   = data["features"][0]["context"][2].text;
+      $("#district")[0].value = data["features"][0]["context"][1].text;
+      $("#place")[0].value    = data["features"][0]["context"][0].text;
+      // responseJSON["features"][0]["place_name"]
+      },
+});
+
+  // https://api.mapbox.com/geocoding/v5/mapbox.places/37.85,55.92.json?limit=1&access_token=pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ
+})
+
+// Добавляем поиск (но пытаемся при выполнении поиска обойтись без добавления маркера)
+
+// Пошел код 
+/* комментируем дубль добавления карты
+  mapboxgl.accessToken = 'pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ';
+const map = new mapboxgl.Map({
+container: 'map',
+style: 'mapbox://styles/mapbox/streets-v11',
+center: [-79.4512, 43.6568],
+zoom: 8
+});
+*/ 
+
+/* Given a query in the form "lng, lat" or "lat, lng"
+* returns the matching geographic coordinate(s)
+* as search results in carmen geojson format,
+* https://github.com/mapbox/carmen/blob/master/carmen-geojson.md */
+const coordinatesGeocoder = function (query) {
+  // Match anything which looks like
+  // decimal degrees coordinate pair.
+  const matches = query.match(
+    /^[ ]*(?:Lat: )?(-?\d+\.?\d*)[, ]+(?:Lng: )?(-?\d+\.?\d*)[ ]*$/i
+  );
+  if (!matches) {
+    return null;
+  }
+
+
+  function coordinateFeature(lng, lat) {
+    return {
+      center: [lng, lat],
+      geometry: {
+      type: 'Point',
+      coordinates: [lng, lat]
+    },
+    place_name: 'Lat: ' + lat + ' Lng: ' + lng,
+    place_type: ['coordinate'],
+    properties: {},
+    type: 'Feature'
+    };
+  }
+
+  const coord1 = Number(matches[1]);
+  const coord2 = Number(matches[2]);
+  const geocodes = [];
+
+  if (coord1 < -90 || coord1 > 90) {
+    // must be lng, lat
+    geocodes.push(coordinateFeature(coord1, coord2));
+  }
+
+  if (coord2 < -90 || coord2 > 90) {
+    // must be lat, lng
+    geocodes.push(coordinateFeature(coord2, coord1));
+  }
+
+  if (geocodes.length === 0) {
+    // else could be either lng, lat or lat, lng
+    geocodes.push(coordinateFeature(coord1, coord2));
+    geocodes.push(coordinateFeature(coord2, coord1));
+  }
+
+  return geocodes;
+};
+
+// Add the control to the map.
+map.addControl(
+  new MapboxGeocoder({
+    accessToken: mapboxgl.accessToken,
+    localGeocoder: coordinatesGeocoder,
+    zoom: 4,
+    placeholder: 'Try: -40, 170',
+    mapboxgl: mapboxgl,
+    marker: false, // add options due to https://github.com/mapbox/mapbox-gl-geocoder/blob/master/API.md#parameters
+    reverseGeocode: true
+  })
+);
+</script> 
