--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,8 +1,9 @@
 <h2>Locations list</h2>
-<%= link_to 'New location', new_location_path %> <br>
+<%= link_to 'New location', new_location_path, data: {turbolinks: "false"} %> <br>
 <%= render partial: 'shared/errors', locals: {resource: @location} %>
 <table class="table">
   <th>Title</th>
+  <th>Address</th>
   <th colspan="2">Players amount default (max / min)</th>
   <th colspan="3">Actions</th>
   <%= render @locations %>
