--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -3,7 +3,7 @@
   <td><%= location.address %></td>
   <td><%= location.default_min_players || '-' %></td>
   <td><%= location.default_max_players || '-' %></td>
-  <td><%= link_to 'Show', location_path(location) %></td>
+  <td><%= link_to 'Show', location_path(location), data: {turbolinks: "false"} %></td>
   <td><%= button_to 'Edit', edit_location_path(location), class: "form-inline-edit", data: {id: location.id} %></td>
   <td><%= button_to 'Delete', location_path(location), method: "delete", data: {confirm: "Are you sure?"} %></td>
 <% end %>
