--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,6 @@
 <h2>Create new game</h2>
 
+<%= render partial: 'shared/errors', locals: {resource: @game} %>
 <%= form_with model: @game, url: {action: "create"} do |form| %>
 <%= render partial: 'form', locals: {form: form, game: @game} %>
 <% end %>
